--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                                 >
                                     Clear
                                 </button>
+                                <a href="#app2" class="btn-search">Search</a>
                             </div>
                             <div hidden class="form-group btn_edit">
                                 <button type="button" class="btn btn-primary">Update</button>
@@ -94,17 +95,17 @@
         </div>
         <div id="app2">
             <h2 class="title-search">Search</h2>
-            <div class="search-form">
-                <div>
+            <div class="search-form row">
+                <div class="col-4">
                     <label for="name_search" class="me-3">Tên</label>
                     <input type="text" id="name_search" class="form-control" />
                 </div>
-                <div>
+                <div class="col-4">
                     <label for="id_number_search" class="me-3">Số CMT</label>
                     <input type="text" id="id_number_search" class="form-control" />
                 </div>
-                <div class="my-3">
-                    <div class="my-3 d-flex">
+                <div class="col-4">
+                    <div class="d-flex">
                         <div class="me-3">
                             <label for="time_search_from">From</label>
                             <input type="date" id="time_search_from" class="form-control" />
